<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyEatery</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_banner">Welcome To Eatery..!!</string>
    <string name="login_username">UserName</string>
    <string name="login_password">PassWord</string>
    <string name="login_button">Login</string>
    <string name="havmor_logo_string"></string>
    <string name="item1"></string>
    <string name="item2"></string>
    <string name="option_launcher"></string>
    <string name="item_list"></string>
    <string name="item4"></string>
    <string name="item3"></string>
    <string name="user_name"></string>
    <string name="signup_button">SignUp</string>
    <string name="submit_button">Submit</string>
    <string name="category1">Specialities</string>
    <string name="category2">Burgers</string>
    <string name="category3">Pizzas</string>
    <string name="category4">Sandwiches</string>
    <string name="ordernow">Order Now</string>
    <string name="removeItem">Remove</string>
    <string name="addItem">Add</string>
    <string name="feedback_title">Customer satisfaction is our goal! \n What we can do to make you feel happier? \n Please give your feedback..(max 70 words)</string>

</resources>
