<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckedTextView
        android:id="@+id/category1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/category1" 
        android:gravity="center_horizontal"
        android:textSize="30sp"/>

    <CheckedTextView
        android:id="@+id/category2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/category2"
        android:textSize="30sp" />

    <CheckedTextView
        android:id="@+id/category3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/category3"
        android:gravity="center_horizontal"
        android:textSize="30sp"/>

    <CheckedTextView
        android:id="@+id/category4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/category4"
        android:gravity="center_horizontal" 
        android:textSize="30sp"/>

</LinearLayout>
