<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:contentDescription="@string/havmor_logo_string"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/havmor_logo_string"
            android:src="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/login_username"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/home_username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical"
            android:contentDescription="@string/login_username"
            android:hint="@string/login_username"
            android:textColor="#9831E5"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/optionbutton"
            android:layout_width="45dip"
            android:layout_height="45dip"
            android:layout_gravity="right"
            android:contentDescription="@string/option_launcher"
            android:src="@drawable/img_menu" />
    </LinearLayout>

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
    
    	<ImageButton
        	android:id="@+id/item1button"
        	android:layout_width="200dp"
        	android:layout_height="100dip"
        	android:contentDescription="@string/item1"
        	android:src="@drawable/img_speciality"
        	android:layout_marginTop="10dip"
        	android:layout_marginBottom="5dip"
        	android:layout_marginLeft="5dip"
        	android:layout_marginRight="5dip" />

    	<TextView
    	    android:id="@+id/tv_speciality"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="Speciality"
    	    android:gravity="center"
    	    android:layout_gravity="center"
    	    android:textAppearance="?android:attr/textAppearanceLarge" />

    	"
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    	
    	
    	<ImageButton
        	android:id="@+id/item2button"
        	android:layout_width="200dp"
        	android:layout_height="100dip"
        	android:contentDescription="@string/item2"
        	android:src="@drawable/img_pizza"
        	android:layout_marginTop="5dip"
        	android:layout_marginBottom="5dip"
        	android:layout_marginLeft="5dip"
        	android:layout_marginRight="5dip" />
	
		<TextView
    	    android:id="@+id/tv_pizza"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="Pizza"
    	    android:layout_gravity="center"
    	    android:gravity="center"
    	    android:textAppearance="?android:attr/textAppearanceLarge" />
    	
	
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    	
    	
    	<ImageButton
        	android:id="@+id/item3button"
        	android:layout_width="200dp"
        	android:layout_height="100dip"
        	android:contentDescription="@string/item3"
        	android:src="@drawable/img_sandwiches"
        	android:layout_marginTop="5dip"
        	android:layout_marginBottom="5dip"
        	android:layout_marginLeft="5dip"
        	android:layout_marginRight="5dip" />
    	
    	<TextView
    	    android:id="@+id/tv_sandwiches"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="Sandwich"
    	    android:gravity="center"
    	    android:layout_gravity="center"
    	    android:textAppearance="?android:attr/textAppearanceLarge" />
    	
    </LinearLayout>

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    	
    	<ImageButton
        	android:id="@+id/item4button"
        	android:layout_width="200dp"
        	android:layout_height="100dip"
        	android:contentDescription="@string/item4"
        	android:src="@drawable/img_burger"
        	android:layout_marginTop="5dip"
        	android:layout_marginBottom="10dip"
        	android:layout_marginLeft="5dip"
        	android:layout_marginRight="5dip" />
    	
    	<TextView
    	    android:id="@+id/tv_burger"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="Burger"
    	    android:gravity="center"
    	    android:layout_gravity="center"
    	    android:textAppearance="?android:attr/textAppearanceLarge" />
    	
    	
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    	
    	<ImageButton
        	android:id="@+id/button_feedback"
        	android:layout_gravity="center"
        	android:layout_width="200dp"
        	android:layout_height="100dip"
        	android:src="@drawable/feedback"
        	android:layout_marginTop="5dip"
        	android:layout_marginBottom="10dip"
        	android:layout_marginLeft="5dip"
        	android:layout_marginRight="5dip" />
    	
    	
	</LinearLayout>
</LinearLayout>
</ScrollView>