<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/orderScreen" >
<TableLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/columnHeader" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
        android:id="@+id/srnoLabel"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Sn"
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/itemLabel"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:text="Item"
        android:gravity="center"
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/qtyLabel"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="Qty"
        android:textSize="30sp"
        android:gravity="center"                
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/rateLabel"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="Rate"
        android:textSize="30sp"        
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </TableRow>

    
</TableLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    
    >

    <Button
        android:id="@+id/button_removeItem"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/removeItem" />
    <Button
        android:id="@+id/button_addItem"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addItem" />
    <Button
        android:id="@+id/button_orderNow"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ordernow" />
    <Button
        android:id="@+id/button_confirmAddress"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DeliveryAddr" />    
    

</LinearLayout>

</LinearLayout>
</ScrollView>